spacing fixed?

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ header{
   gap: 10px;
   max-width: 600px;
   margin: 0 auto;
+  margin-top: 10px;
 }
 
 .cell {
@@ -149,7 +150,7 @@ nav .navlinks li a{
   justify-content: space-around;
   align-items: center;
   padding-top:4rem;
-  margin-top: 0;
+  margin-top: 10px;
   padding-top: 0;
 }
 .container .hero-pic{
